# Project-SoulScript

./: .env.example  README.txt  SoulScript_README.txt  coding_prefs.txt  pyproject.toml  requirements.txt  run_tests.py
soulscript/: Agentic Functions.ipynb  Agentic_RAG.ipynb  __init__.py  pyproject.toml  requirements.txt
soulscript.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
soulscript/core/: __init__.py  agentic_helpers.py  config.py  db.py  graph_nodes.py  llm.py  memory.py  npc.py  policy.py  relationships.py  runtime.py  scheduler.py  tools.py  types.py
soulscript/demo/: soulscript_demo.py  soulscript_walkthrough.ipynb  ui_streamlit.py  ui_streamlit_simple.py
soulscript/demo/run_logs/: run_20251126_111929.jsonl
soulscript/demo/seeds/: README.md  npc_anya.json  npc_bren.json  npc_cassia.json  npc_corvin.json  npc_dara.json  npc_elio.json  npc_fenna.json  npc_garrick.json  npc_helia.json  npc_holt.json  npc_ivar.json  npc_juno.json  npc_lira.json  npc_lyra.json  npc_mara.json  npc_marek.json  npc_olina.json  npc_petro.json  npc_quinn.json  npc_rhea.json  npc_riven.json  npc_sena.json  npc_silas.json  npc_tamsin.json  npc_thorne.json  npc_vex.json
soulscript/demo/soulscript/runtime_data/: tavern_state.sqlite
soulscript/engine_api/: server.py
soulscript/migrations/: README.md
soulscript/runtime_data/: tavern_state.sqlite
soulscript/tests/: test_memory.py  test_policy.py  test_relationships.py  test_sanity.py  test_traits.py
