########## pyproject ##########
# Project metadata for Soulscript demo packaging.

[build-system]
requires = ["setuptools>=68", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "soulscript-demo"
version = "0.2.0"
description = "Tavern simulation showcasing SoulScript NPC agents with perception-aware relationships."
authors = [{name = "SoulScript Team", email = "team@soulscript.dev"}]
readme = "../SoulScript_README.txt"
requires-python = ">=3.11"
dependencies = [
  "langgraph==0.0.45",
  "langchain==0.1.20",
  "pydantic==2.8.2",
  "networkx==3.2.1",
  "streamlit==1.36.0",
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "rich==13.7.1",
  "textual==0.45.1",
  "pandas==2.2.2",
  "sqlalchemy==2.0.32",
  "openai==1.40.3",
  "plotly==5.22.0",
  "streamlit-plotly-events==0.0.6"
]

[project.optional-dependencies]
test = [
  "pytest==8.3.2"
]

[tool.ruff]
line-length = 100
extend-select = ["I001", "B", "C4"]
ignore = ["E501"]
